fix List.of